--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
  
     <body>
         <div id="quiz-box">
-            <container id="score-box">    
+            <container id="score-timer-box">    
                 <h5 id="high-score">View High Scores</h5>
                 <h5 id="timer">Time: </h5>
             </container>
 
-            <container id="question-box">
-                <h1 id="header-title"> Coding Quiz Challenge</h1>
+            <container id="instruction-box">
+                <h1 id="quiz-title"> Coding Quiz Challenge</h1>
             
                 <div id="quiz-instructions">
                     <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
@@ -25,6 +25,18 @@
                 <button id="start-button"> Start Quiz</button>
             
             </container>
+
+            <container id="question-box">
+                <h1 id="question">question text dfdfd fdfdf dfdf dfdf dfdfdf dfdfdf dfdfd fdfdf?</h1>
+                    <ul>
+                        <li><button id="answer-1">1) answer text</button></li>
+                        <li><button id="answer-1">2) answer text</button></li>
+                        <li><button id="answer-1">3) answer text</button></li>
+                        <li><button id="answer-1">4) answer text</button></li>
+                    </ul>
+
+            </container>
+
         </div>
 
         <script src="./assets/js/script.js"></script>
