finished html and css for the rest of quiz screens

--- a/index.html
+++ b/index.html
@@ -34,9 +34,16 @@
                         <li><button id="answer-1">3) answer text</button></li>
                         <li><button id="answer-1">4) answer text</button></li>
                     </ul>
-
+                <h2 id="correct-or-wrong">Correct!</h2>
             </container>
 
+            <container id="final-score-box">
+                <h1>All done!</h1>
+                <p id="final-score">Your final score is 'placeholder'.</p>
+                <form>
+                    <label for="initials">Enter initials: </label><input type="text" id="initials" name="initials"><button id="score-submit">Submit</button>
+                </form>
+            </container>
         </div>
 
         <script src="./assets/js/script.js"></script>
