more JS work - added final score page code

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 <h1 id="question">question text?</h1>
                     <div id="button-box">
                     </div>
-                <h2 id="correct-or-wrong">Correct!</h2>
+                <h2 class="hidden" id="correct-or-wrong"></h2>
             </container>
             <!-- Final Score screen. -->
             <container class="hide" id="final-score-box">
                 <h1>All done!</h1>
-                <p id="final-score">Your final score is 'placeholder'.</p>
+                <p id="final-score">Your final score is 'placeholder'.</p> <!--remove this text when done w/ final score stuff-->
                 <form>
                     <label for="initials">Enter initials: </label><input type="text" id="initials" name="initials"><button id="score-submit">Submit</button>
                 </form>
