worked on final score page and resetting game

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                 <h1>All done!</h1>
                 <p id="final-score">Your final score is 'placeholder'.</p> <!--remove this text when done w/ final score stuff-->
                 <form>
-                    <label for="initials">Enter initials: </label><input type="text" id="initials" name="initials"><button id="score-submit">Submit</button>
+                    <label for="initials">Enter initials: </label>
+                    <input id="initials" name="initials"></input>
+                    <button id="score-submit">Submit</button>
                 </form>
             </container>
             <!-- High Scores screen. -->
