fixed view high scores button and other high scores page buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="quiz-box">
             <container id="score-timer-box">    
-                <h5 id="high-score">View High Scores</h5>
+                <button id="view-high-scores">View High Scores</button>
                 <h5 id="timer">Time: </h5>
             </container>
             <!-- Starting screen -->
