did most of the work on the timer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="quiz-box">
             <container id="score-timer-box">    
                 <button id="view-high-scores">View High Scores</button>
-                <h5 id="timer">Time: </h5>
+                <h5 id="timer"></h5>
             </container>
             <!-- Starting screen -->
             <container id="instruction-box">
@@ -34,7 +34,7 @@
             <!-- Final Score screen. -->
             <container class="hide" id="final-score-box">
                 <h1>All done!</h1>
-                <p id="final-score">Your final score is 'placeholder'.</p> <!--remove this text when done w/ final score stuff-->
+                <p id="final-score"></p> <!--remove this text when done w/ final score stuff-->
                 <form>
                     <label for="initials">Enter initials: </label>
                     <input id="initials" name="initials"></input>
