more work on the local storage section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="quiz-box">
             <container id="score-timer-box">    
                 <button id="view-high-scores">View High Scores</button>
-                <h5 id="timer"></h5>
+                <h5 class="hide" id="timer"></h5>
             </container>
             <!-- Starting screen -->
             <container id="instruction-box">
@@ -44,7 +44,7 @@
             <!-- High Scores screen. -->
             <container class="hide" id="high-score-page">
                 <h2>High scores</h2>
-
+                <ol id="highScores"></ol>
                 <button id="go-back">Go back</button>
                 <button id="clear-high-scores">Clear high scores</button>
             </container>
